kubernetes/AKS-Manifests/azure-ag-ingress.yaml
# deploy ingress service 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: chatappns
  name: chatapp-ingress-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: azure-application-gateway
  tls:
    - hosts:
        - chat.abd0hrz.in
        - chatapi.abd0hrz.in
      secretName: tls-secret
  rules:
    - host: chat.abd0hrz.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-frontend-service
                port:
                  number: 80

    - host: chatapi.abd0hrz.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend-service
                port:
                  number: 80





## create and store the ssl certificate in secrets 
# kubectl create secret tls chatapp-secret-tls --cert=tls.crt --key=tls.key -n production  # Ensure this matches your namespace
# kubectl describe secret chatapp-secret-tls -n production
# kubectl get secret chatapp-secret-tls -n production -o yaml
# echo "<base64_encoded_certificate>" | base64 --decode
